--- a/smartCity/otherPages/templates/otherPages/homePage.html
+++ b/smartCity/otherPages/templates/otherPages/homePage.html
@@ -44,9 +44,12 @@
                                <a href = '/barcode/reader/'><h1 class = 'blockItem'>Shopping</h1></a>
                         </div>
 
+                    {% if manager %}
                        <div class = 'item'>
                                <a href = '/recycle/managerPage/'><h1 class = 'blockItem'>Recycle</h1></a>
                         </div>
+
+                    {% endif %}
 
 
                 </div>
