--- a/smartCity/transportManager/templates/transportManager/mainPage.html
+++ b/smartCity/transportManager/templates/transportManager/mainPage.html
@@ -13,7 +13,7 @@
                 <div class = 'navbar'>
 
                         <div class = 'logo'>
-                                <h1> Sc </h1>
+                                <a href='/'><h1> Sc </h1></a>
                         </div>
 
                         <div class = 'score'>
