--- a/smartCity/userManager/templates/userManager/loginPage.html
+++ b/smartCity/userManager/templates/userManager/loginPage.html
@@ -14,7 +14,7 @@
                     <input type="text" class="usernameInput">
                     <input type="password" class="passwordInput">
                     <button class="loginButton">Sign In</button>
-
+                    <a href = '/account/RegisterUser/'> Need an account? </a>
                     </div>
                     <script src="{% static 'jsFiles/userLogin.js' %}"></script>
         </body>
