--- a/smartCity/userManager/templates/userManager/registerPage.html
+++ b/smartCity/userManager/templates/userManager/registerPage.html
@@ -18,6 +18,7 @@
                     <input type="password" class="passwordInput">
                     <input type="password" class="confirmPasswordInput">
                     <button class="submitButton">Sign Up</button>
+                    <a href = '/account/loginUser/'> Already have an account? </a>
                 </div>
 
         </body>
