--- a/smartCity/otherPages/templates/otherPages/homePage.html
+++ b/smartCity/otherPages/templates/otherPages/homePage.html
@@ -24,8 +24,11 @@
                         </div>
 
                         <div class = 'name'>
-                                <h1 class = 'logOut'> LogOut </h1>
                                 <h1> {{ username }}</h1>
+                        </div>
+                        
+                        <div class = 'logOut'>
+                                <h1 class = 'logOut'> LogOut </h1>
                         </div>
 
 
